# Akash

./: .gitignore  README.md
Assignment/: Assignment1.py  Assignment2.py  Assignment3.py
Project1/: .env.example  Dockerfile.fastapi  Dockerfile.nginx  FDS.bash  README.md  docker-compose.yml  pyproject.toml
Project1/db/: db.py
Project1/nginx/: nginx.conf
Project1/project1/: alembic.ini  functions.py  main.py
Project1/project1/alembic/: env.py
Project1/project1/db/: db.py  schema.py
Project1/project1/v1/Features/file/: func.py  routes.py
Project1/project1/v1/Features/verification/: func.py  routes.py
Project1/project1/v1/request/: type.py
Project1/scripts/: migrate.sh
fastApi/: README.md  decorators.py  functions.py  main.py
fastApi/db/: database.json
learning_basic/: Collections.py  Functions.py  JSON_file.py  OOPs.py  conditionals.py  hello.py  strings.py  variables.py
