[project]
name = "project1"
version = "0.1.0"
description = ""
authors = [
    {name = "Akash-kafle",email = "aakashkafle47@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
packages = [
    { include = "project1" }
]
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
